# Stream-Processor

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: animation_page.py  app.py  main.py  match_analysis_page.py  model_insights.py  overview.py
app/components/: pass_network.py  player_performace.py  shot_map.py
app/utils/: mlflow_utils.py  simulate_utils.py  ui_helpers.py
app/webpages/: match_analysis.py  model_insights.py  overview.py
football_stream_processor/: animate_passes.py
football_stream_processor/animate/: animate_match.py  animate_passes.py
mlflow/mlartifacts/models/xgboost/: meta.yaml
mlflow/mlartifacts/models/xgboost/version-1/: meta.yaml
mlflow/mlartifacts/models/xgboost/version-2/: meta.yaml
mlflow/mlruns/0/: meta.yaml
mlflow/mlruns/729195049582631758/: meta.yaml
mlflow/mlruns/729195049582631758/1c5060d013e9413c8f919a31ab88749d/: meta.yaml
mlflow/mlruns/729195049582631758/1c5060d013e9413c8f919a31ab88749d/tags/: mlflow.runName
mlflow/mlruns/729195049582631758/292e0a62c5e141f6acf0f82d75328450/: meta.yaml
mlflow/mlruns/729195049582631758/292e0a62c5e141f6acf0f82d75328450/tags/: mlflow.runName
mlflow/mlruns/729195049582631758/36b7efdc6cc749518c9550ed927c07b4/: meta.yaml
mlflow/mlruns/729195049582631758/36b7efdc6cc749518c9550ed927c07b4/tags/: mlflow.runName
mlflow/mlruns/729195049582631758/380716b598544073918fde5a5ba36f47/: meta.yaml
mlflow/mlruns/729195049582631758/380716b598544073918fde5a5ba36f47/tags/: mlflow.runName
mlflow/mlruns/729195049582631758/5798114f431540fdbf2076ad1cd5a7d0/: meta.yaml
mlflow/mlruns/729195049582631758/81051365576840a0ba5f5f52232addff/: meta.yaml
mlflow/mlruns/729195049582631758/8c3f582e5f3c421496863debfdea87b9/: meta.yaml
mlflow/mlruns/729195049582631758/91995aa11c3e4207b33556b11274348a/: meta.yaml
mlflow/mlruns/729195049582631758/dc2c3c1ee8274c9b8791caeb326c7c40/: meta.yaml
mlflow/mlruns/729195049582631758/fad8e87865604c5d94cded305dae289a/: meta.yaml
mlruns/0/: meta.yaml
models/xg_model/: data_pipeline.py
scripts/: animate_passes.py  eda.py  plot_passes.py  run_mlflow.sh  simulate.py
src/app/components/: pass_network.py  player_performace.py
src/app/utils/: ui_helpers.py
src/app/webpages/: model_insights.py
src/football_stream_processor/: config.py  match_summary.py  simulate.py
src/football_stream_processor/animate/: animate_match.py  animate_passes.py
src/football_stream_processor/match/: match_summary.py  simulate.py
src/football_stream_processor/models/xg_model/: data_pipeline.py  data_preparation.py  evaluation.py  feat_engineering.py  feature_engineering.py  model.py  predict.py  train.py  utils.py
src/football_stream_processor/utils/: animation_utils.py  eda_utils.py
tests/: conftest.py  test_data_pipeline.py  test_feature_engineering.py  test_mlflow_utils.py  test_model.py  test_simulate.py  test_simulate_utils.py  test_train_integration.py
(+10 files in other folders)
