[tool.poetry]
name = "football-stream-processor"
version = "0.1.0"
description = "This project processes a stream of sports data, specifically from Soccer leagues and generates insights"
authors = ["Smarth <bakshismarth.99@gmail.com>"]
readme = "README.md"
packages = [{ include = "football_stream_processor" }]

[tool.poetry.dependencies]
python = ">=3.12"
ffmpeg = ">=1.4,<2.0"
fonttools = ">=4.58.4,<5.0.0"
kiwisolver = ">=1.4.8,<2.0.0"
matplotlib = ">=3.10.3,<4.0.0"
numpy = ">=2.3.1,<3.0.0"
packaging = ">=25.0,<26.0"
pillow = ">=11.2.1,<12.0.0"
pip = ">=25.1.1,<26.0.0"
pyparsing = ">=3.2.3,<4.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
six = ">=1.17.0,<2.0.0"
scikit-learn = "^1.7.0"

[tool.poetry.scripts]
animate-passes = "football_stream_processor.animate_passes:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
