[tool.poetry]
authors = ["Smarth <bakshismarth.99@gmail.com>"]
description = "This project processes a stream of sports data, specifically from Soccer leagues, applies ML and generates insights"
name = "football-stream-processor"
packages = [{include = "football_stream_processor", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
argparse = "^1.4.0"
ffmpeg = ">=1.4,<2.0"
fonttools = ">=4.58.4,<5.0.0"
jupyter = "^1.1.1"
kiwisolver = ">=1.4.8,<2.0.0"
matplotlib = ">=3.10.3,<4.0.0"
numpy = ">=1.26.0,<2.0.0"
packaging = ">=25.0,<26.0"
pandas = "^2.3.0"
pillow = ">=11.2.1,<12.0.0"
pyparsing = ">=3.2.3,<4.0.0"
python = ">=3.11,<3.12"
python-dateutil = ">=2.9.0.post0,<3.0.0"
scikit-learn = "^1.7.0"
seaborn = "^0.13.2"
shap = "^0.48.0"
six = ">=1.17.0,<2.0.0"
tqdm = "^4.67.1"
xgboost = "^3.0.2"
mlflow = "^3.1.1"
optuna = "^4.4.0"

[tool.poetry.scripts]
animate-passes = "football_stream_processor.animate.animate_passes:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
